# clapdown

./: .versionary-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  devenv.nix  panache.toml  versionary.jsonc
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  options.rs  render.rs
tests/: render.rs
tests/common/: mod.rs
tests/snapshots/: render__full_document_snapshot.snap  render__pandoc_full_document_snapshot.snap
